fixed a gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -793,7 +793,6 @@ body{
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
-    gap: 16px;
     border: none;
     border-radius: 4px;
     background: var(--iris, #4D5AE5);
@@ -815,9 +814,9 @@ body{
 }
 
 
-.footer-subscribe-icon {
-    margin-left: 16px;
+.footer-subscribe-icon {    
     fill: var(--white, #FFF);
+    margin-left: 16px;
 }
 .footer-subscribe-form{
     display: flex;
